# uwarl-barrett-ros-pkg

./: README.md  README.md~  README.txt  build.sh  cmds-7dof-cycle.sh  cmds-7dof.sh  commands-ros-n.sh  stack.xml
barrett_hand_node/: CMakeLists.txt
barrett_hand_node/src/: barrett_hand_node.cpp
libbarrett_ros/: Makefile  manifest.xml
perception_palm/: CMakeLists.txt  package.xml
perception_palm/include/MCP2210-Library/: ppalm_driver.cpp
perception_palm/launch/: palm_mono.rviz  perception_palm.launch
wam_common/: stack.xml
wam_common/wam_actions/: CMakeLists.txt  manifest.xml
wam_common/wam_actions/action/: RTJointTraj.action
wam_common/wam_msgs/msg/: RTJointTrajPt.msg  tactilePressure.msg
wam_common/wam_srvs/: manifest.xml
wam_demos/src/: teach.cpp  teach.h
wam_description/: .cproject  .project  .pydevproject  CMakeLists.txt  manifest.xml
wam_description/launch/: wam_4dof.launch  wam_7dof.launch  wam_7dof_ft_hand.launch  wam_7dof_hand.launch
wam_description/urdf/: wam_4dof.urdf  wam_7dof.urdf  wam_7dof_ft_hand.urdf  wam_7dof_hand.urdf
wam_node/: CMakeLists.txt  manifest.xml
wam_node/src/: wam_node.cpp  wam_node.cpp~
wam_node/srv/: CartMove.srv  JointMove.srv
wam_robot/: README.txt  stack.xml
wam_robot/wam_node/: CMakeLists.txt  manifest.xml
wam_robot/wam_node/src/: barrett_hand_node.cpp  wam_node.cpp
wam_srvs/: CMakeLists.txt
wam_teleop/: CMakeLists.txt
